overlays/istio_k8s_ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio-injection: enabled
    app.kubernetes.io/component: httpbin
